src/objects/Country_Codes__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Country_Name__c</fullName>
        <label>Country Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Country_Three_Letters_Code__c</fullName>
        <description>Three letters code value for country</description>
        <label>Country Three Letters Code</label>
        <length>3</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EU__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EU</label>
        <type>Checkbox</type>
    </fields>
    <label>Country Codes</label>
</CustomObject>